--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity
             android:name=".login.LoginActivity"
             android:theme="@style/DialogTheme" />
+        <activity android:name=".NewActivity"></activity>
     </application>
 
 </manifest>
